# lynx-rs

./: Cargo.toml  README  docker-compose.yml
backend/: .env  Cargo.toml
backend/src/: db.rs  main.rs  routes.rs
backend/src/handlers/: kitty.rs  mod.rs  profile.rs  users.rs
frontend/: Cargo.toml  index.html
frontend/src/: main.rs
frontend/src/components/: ability.rs  kitty.rs  mod.rs  profile.rs
