[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
argon2 = "0.5.3"
async-trait = "0.1.83"
axum = "0.7.7"
dotenv = "0.15.0"
hyper = { version = "1.5.0", features = ["server", "http1", "http2"] }
jsonwebtoken = "9.3.0"
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.132"
sqlx = { version = "0.8.2", features = ["runtime-tokio-rustls", "postgres"] }
tokio = { version = "1.41.0", features = ["full"] }
tower = "0.5.1"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = "1.11.0"
