[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
gloo = "0.11.0"
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.132"
wasm-bindgen = "0.2.95"
yew = { version = "0.21.0", features = ["csr"] }
yew-router = "0.18.0"

[dependencies.web-sys]
version = "0.3"
features = [
    "Window",
    "Document",
    "HtmlElement",
    "console"
]

[profile.release]
lto = true
